# datathon-7mlet-grupo-96

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  LICENSE  Makefile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
data/golden_set/: evaluation_cases.jsonl
data/kaggle/: README.md
data/synthetic_enrichment/: delayed_rewards.csv  offer_catalog.csv  offer_events.csv
data/synthetic_enrichment/policy_docs/: policy_cdb.md  policy_consultivo.md  policy_fundo.md  policy_poupanca.md  suitability_geral.md
docs/: architecture-azure.md  demo-day-checklist.md  demo-script.md  lgpd-plan.md  mlops-lifecycle.md  model-card.md  service-contract.md  system-card.md
docs/pitch/: pitch-deck.md  roteiro.md
infra/terraform/: compute.tf  data.tf  governance.tf  main.tf  observability.tf  outputs.tf  security.tf  variables.tf
logs/: decisions.jsonl
models/registry/: linucb_52552dc4.joblib  manifest.json  thompson_sampling_37180f1f.joblib  thompson_sampling_5575d15c.joblib
notebooks/: 01_eda.ipynb
reports/: algorithm-comparison.md  data-generation.md  data-quality.md  offline-evaluation.md  technical-report.md
scripts/: render_report_pdf.py
src/bandit_platform/: cli.py
src/bandit_platform/assistant/: explain.py  knowledge_base.py  llm.py  qa.py
src/bandit_platform/data/: clean.py  kaggle_loader.py
src/bandit_platform/evaluation/: dataset.py  golden_set.py  metrics.py  simulate.py
src/bandit_platform/mlops/: drift.py  promotion.py  registry.py  tracking.py
src/bandit_platform/policies/: base.py  baseline.py  features.py  linucb.py  suitability.py  thompson_sampling.py  warm_start.py
src/bandit_platform/service/: active_policy.py  app.py  audit.py  core.py  schemas.py
src/bandit_platform/synthetic/: events.py  offer_catalog.py
streamlit_app/: app.py
tests/: test_active_policy.py  test_active_policy_registry.py  test_app.py  test_assistant_explain.py  test_assistant_llm.py  test_assistant_qa.py  test_audit.py  test_baseline.py  test_clean.py  test_cli.py  test_core.py  test_drift.py  test_evaluation_dataset.py  test_events.py  test_golden_set.py  test_kaggle_loader.py  test_knowledge_base.py  test_linucb.py  test_offer_catalog.py  test_policy_docs.py  test_policy_features.py  test_promotion.py  test_registry.py  test_simulate.py  test_streamlit_app.py  test_suitability.py  test_thompson_sampling.py  test_tracking.py  test_warm_start.py
tests/fixtures/: bank_marketing_sample.csv
