[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bandit-platform"
version = "0.1.0"
description = "Plataforma de experimentacao adaptativa (multi-armed bandit) - Datathon 7MLET, Grupo 96"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
bandit-cli = "bandit_platform.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bandit_platform"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
