[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bandit-platform"
version = "0.1.0"
description = "Plataforma de experimentacao adaptativa (multi-armed bandit) - Datathon 7MLET, Grupo 96"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "torch>=2.2",
    "kaggle>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-huggingface>=0.1",
]

[project.scripts]
bandit-cli = "bandit_platform.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
]
notebooks = [
    "jupyter>=1.0",
    "nbformat>=5.10",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bandit_platform"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
