[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bandit-platform"
version = "0.1.0"
description = "Plataforma de experimentacao adaptativa (multi-armed bandit) - Datathon 7MLET, Grupo 96"
readme = "README.md"
license = "MIT"
packages = [{include = "bandit_platform", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = ">=2.2"
numpy = ">=1.26"
torch = ">=2.2"
kaggle = ">=2.0"
python-dotenv = ">=1.0"
fastapi = ">=0.110"
uvicorn = ">=0.29"
langchain-core = ">=0.3"
langchain-text-splitters = ">=0.3"
langchain-huggingface = ">=0.1"
sentence-transformers = ">=3.0"
langchain-anthropic = ">=0.3"
streamlit = ">=1.38"
joblib = ">=1.3"
mlflow = ">=2.14,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.6"
httpx = ">=0.27"
poethepoet = ">=0.24"

[tool.poetry.group.notebooks.dependencies]
jupyter = ">=1.0"
nbformat = ">=5.10"
ipykernel = ">=6.29"
matplotlib = ">=3.9"

[tool.poetry.scripts]
bandit-cli = "bandit_platform.cli:main"

[tool.poe.tasks]
lint  = "ruff check src tests"
test  = "pytest -q"
serve = "uvicorn bandit_platform.service.app:app --reload --port 8000"
demo  = "streamlit run streamlit_app/app.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
